# budgie-user-indicator-redux

./: CHANGELOG.md  README.md  config.h.in  meson.build  meson_options.txt
.tx/: config
data/: UserIndicatorRedux.plugin  UserIndicatorRedux.plugin.in  com.github.EbonJaeger.user-indicator-redux.appdata.xml  com.github.EbonJaeger.user-indicator-redux.gschema.xml  meson.build  user-indicator-redux.appdata.xml.in
po/: LINGUAS  budgie-user-indicator-redux.pot  da.po  de.po  en_GB.po  en_US.po  es.po  es_MX.po  fr.po  ja.po  ka.po  ko.po  lt.po  meson.build  oc.po  pl.po  pt.po  pt_BR.po  pt_PT.po  ru.po  tr.po  zh.po
scripts/: updatePot.sh  updateTranslations.sh
src/: applet.vala  dbus.vala  meson.build  popover.vala  settings.ui  user-indicator-redux.gresource.xml  user_button.vala
src/Widgets/: user_box.vala  user_image.vala
style/: _buttons.scss  _menu.scss  _userbox.scss  _vars.scss  main.scss  meson.build
vapi/: config.vapi
